--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1274,11 +1274,11 @@ jobs:
         # Re-compile the native compiler script
         python stage2_compiler.py compiler_native.py1 > compiler_native.py
 
-    # 29. Create Cat Source (Native Hello World - Clean)
-    - name: 29. Create Cat Source (Debug: Simple Hello)
+        # 29. Create 'cat' Source (Fix: Use chr(10) instead of \n to avoid SyntaxError)
+    - name: 29. Create Cat Source
       run: |
         cat <<EOF > cat_spec.py1
-        # Native Hello World Test
+        # Native Cat Command
         @v 表 'print'
         @v 追 'append'
         @v 字 'str'
@@ -1309,58 +1309,105 @@ jobs:
         @v 蔵 '"k"+"e"+"r"+"n"+"e"+"l"+"3"+"2"+"."+"d"+"l"+"l"'
         @v 出 '"G"+"e"+"t"+"S"+"t"+"d"+"H"+"a"+"n"+"d"+"l"+"e"'
         @v 記 '"W"+"r"+"i"+"t"+"e"+"F"+"i"+"l"+"e"'
-        # ExitProcess
         @v 終 '"E"+"x"+"i"+"t"+"P"+"r"+"o"+"c"+"e"+"s"+"s"'
+        
+        @v 開 '"_"+"s"+"y"+"s"+"_"+"o"+"p"+"e"+"n"'
+        @v 読 '"R"+"e"+"a"+"d"+"F"+"i"+"l"+"e"'
+        @v 寸 '"G"+"e"+"t"+"F"+"i"+"l"+"e"+"S"+"i"+"z"+"e"'
+        @v 閉 '"C"+"l"+"o"+"s"+"e"+"H"+"a"+"n"+"d"+"l"+"e"'
 
         @v 壺 '"1"+"0"+"0"'
+        @v 地 '"2"+"0"+"0"'
         @v 無 '"0"'
         @v 負 '"-"+"1"'
         @v 空 '" "'
-        @v 陰 '"-"+"1"+"1"'
+        @v 〆 '"0"'
 
-        # H
-        @v 譜 '"7"+"2"'
-        # i
+        @v 譜 '"1"+"0"+"2"'
         @v 伊 '"1"+"0"+"5"'
-        # newline
-        @v 改 '"1"+"0"'
+        @v 豆 '"1"+"2"+"2"'
+        @v 仏 '"9"+"8"'
+        @v 宇 '"1"+"1"+"7"'
+        @v 底 '"9"+"5"'
+        @v 寝 '"1"+"1"+"0"'
+        @v 阿 '"9"+"7"'
+        @v 帝 '"1"+"1"+"6"'
+        @v Ｖ '"1"+"1"+"8"'
+        @v 絵 '"1"+"0"+"1"'
+        @v ド '"4"+"6"'
+        @v 須 '"1"+"1"+"5"'
+        @v 矛 '"1"+"0"+"9"'
+        @v 陰 '"-"+"1"+"1"'
         
         @v コ 'codes'
 
         $
         コ = []
-
-        # Prepare "Hi\n" at address 100
-        # H
+        # --- Init ---
+        # Prepare Filename "fizzbuzz_native.asm"
         コ.追(書 + 空 + 壺 + 空 + 譜)
-        # i
         コ.追(書 + 空 + 字(101) + 空 + 伊)
-        # \n
-        コ.追(書 + 空 + 字(102) + 空 + 改)
-
+        コ.追(書 + 空 + 字(102) + 空 + 豆)
+        コ.追(書 + 空 + 字(103) + 空 + 豆)
+        コ.追(書 + 空 + 字(104) + 空 + 仏)
+        コ.追(書 + 空 + 字(105) + 空 + 宇)
+        コ.追(書 + 空 + 字(106) + 空 + 豆)
+        コ.追(書 + 空 + 字(107) + 空 + 豆)
+        コ.追(書 + 空 + 字(108) + 空 + 底)
+        コ.追(書 + 空 + 字(109) + 空 + 寝)
+        コ.追(書 + 空 + 字(110) + 空 + 阿)
+        コ.追(書 + 空 + 字(111) + 空 + 帝)
+        コ.追(書 + 空 + 字(112) + 空 + 伊)
+        コ.追(書 + 空 + 字(113) + 空 + Ｖ)
+        コ.追(書 + 空 + 字(114) + 空 + 絵)
+        コ.追(書 + 空 + 字(115) + 空 + ド)
+        コ.追(書 + 空 + 字(116) + 空 + 阿)
+        コ.追(書 + 空 + 字(117) + 空 + 須)
+        コ.追(書 + 空 + 字(118) + 空 + 矛)
+        コ.追(書 + 空 + 字(119) + 空 + 〆)
         # Get StdOut Handle
         コ.追(置 + 空 + 繰 + 空 + 陰)
         コ.追(呼 + 空 + 出)
+        # Save StdOut Handle to R13
+        コ.追(置 + 空 + 肆 + 空 + 蓄)
+        # Open File
+        コ.追(置 + 空 + 繰 + 空 + 壺)
+        コ.追(取 + 空 + 繰 + 空 + 壺)
+        コ.追(呼 + 空 + 開)
         コ.追(置 + 空 + 壱 + 空 + 蓄)
-
-        # WriteFile(StdOut, Buffer, Size, &BytesWritten, NULL)
+        # Get File Size
         コ.追(置 + 空 + 繰 + 空 + 壱)
-        コ.追(取 + 空 + タ + 空 + 壺)
-        コ.追(置 + 空 + 蜂 + 空 + 字(3))
-        コ.追(取 + 空 + 苦 + 空 + 字(200))
+        コ.追(置 + 空 + タ + 空 + 無)
+        コ.追(呼 + 空 + 寸)
+        コ.追(置 + 空 + 弐 + 空 + 蓄)
+        # Read File
+        コ.追(置 + 空 + 繰 + 空 + 壱)
+        コ.追(取 + 空 + タ + 空 + 地)
+        コ.追(置 + 空 + 蜂 + 空 + 弐)
+        コ.追(取 + 空 + 苦 + 空 + 壺)
+        コ.追(押 + 空 + 無)
+        コ.追(呼 + 空 + 読)
+        # Write to StdOut
+        コ.追(置 + 空 + 繰 + 空 + 肆)
+        コ.追(取 + 空 + タ + 空 + 地)
+        コ.追(置 + 空 + 蜂 + 空 + 弐)
+        コ.追(取 + 空 + 苦 + 空 + 壺)
         コ.追(押 + 空 + 無)
         コ.追(呼 + 空 + 記)
-
+        # Close Handle
+        コ.追(置 + 空 + 繰 + 空 + 壱)
+        コ.追(呼 + 空 + 閉)
         # Exit
         コ.追(置 + 空 + 繰 + 空 + 無)
         コ.追(呼 + 空 + 終)
-
         表(結(コ))
         EOF
 
-        # Generate ASM
-        python compiler_gen3.py cat_spec.py1 > cat_ir_gen.py
+        # Generate ASM (DEBUG enabled)
+        python compiler_gen3.py cat_spec.py1 > cat_ir_gen.py || (cat cat_ir_gen.py && exit 1)
         python cat_ir_gen.py > cat.ir
+        
+        # Compile to Native
         python compiler_native.py cat.ir > cat_native.asm
 
     # 30. Build & Run Cat (CMD Shell)
@@ -1373,8 +1420,9 @@ jobs:
         echo "--- Linking Cat ---"
         link.exe cat_native.obj /subsystem:console /entry:start /defaultlib:kernel32.lib /nologo /out:cat.exe
         
-        echo "--- Running Cat ---"
+        echo "--- Running Cat (Displaying source asm) ---"
         cat.exe
+
 
 
 
